introduce with() convenience method

--- a/test/fixtures/features.scss
+++ b/test/fixtures/features.scss
@@ -89,6 +89,11 @@
   @include font-face(SourceSansPro, '/fonts/Source_Sans_Pro/SourceSansPro-Italic', normal, italic);
 }
 
+.font-feature-settings {
+  @include font-feature-settings("liga");
+  @include font-feature-settings("pnum", "kern" false);
+}
+
 .hidpi {
   @include hidpi(1.5) {
     width: 260px;
