--- a/assets/stylesheets/addons/_triangle.scss
+++ b/assets/stylesheets/addons/_triangle.scss
@@ -6,8 +6,10 @@
   $height: nth($size, length($size));
 
   $foreground-color: nth($color, 1);
-  $background-color: transparent;
-  @if length($color) == 2 { $background-color: nth($color, 2); }
+  $background-color: transparent !default;
+  @if (length($color) == 2) {
+    $background-color: nth($color, 2);
+  }
 
   @if ($direction == up) or ($direction == down) or ($direction == right) or ($direction == left) {
 
