--- a/test/fixtures/features.scss
+++ b/test/fixtures/features.scss
@@ -295,7 +295,11 @@ $gw-gutter: 40px;
 }
 
 .position {
+  @include position(relative);
   @include position(relative, 0px 0 0 100px);
+  @include position(relative, 0 0 0 0);
+  @include position(relative, 0 3em 0 3em);
+  @include position(relative, null null null null);
 }
 
 .prefixer {
