Updated to version 3.2.1.

--- a/test/fixtures/features.scss
+++ b/test/fixtures/features.scss
@@ -299,7 +299,7 @@ $gw-gutter: 40px;
   @include position(relative, 0px 0 0 100px);
   @include position(relative, 0 0 0 0);
   @include position(relative, 0 3em 0 3em);
-  @include position(relative, null null null null);
+  //@include position(relative, null null null null);
 }
 
 .prefixer {
