--- a/assets/stylesheets/_bourbon.scss
+++ b/assets/stylesheets/_bourbon.scss
@@ -1,29 +1,41 @@
+/* Bourbon 4.0.2
+ * http://bourbon.io
+ * Copyright 2011-2014 thoughtbot, inc.
+ * MIT License */
+
 // Settings
 @import "settings/prefixer";
 @import "settings/px-to-em";
+@import "settings/asset-pipeline";
 
 // Custom Helpers
+@import "helpers/convert-units";
 @import "helpers/gradient-positions-parser";
+@import "helpers/is-num";
+@import "helpers/linear-angle-parser";
+@import "helpers/linear-gradient-parser";
 @import "helpers/linear-positions-parser";
+@import "helpers/linear-side-corner-parser";
 @import "helpers/radial-arg-parser";
 @import "helpers/radial-positions-parser";
+@import "helpers/radial-gradient-parser";
 @import "helpers/render-gradients";
 @import "helpers/shape-size-stripper";
+@import "helpers/str-to-num";
 
 // Custom Functions
+@import "functions/assign";
 @import "functions/color-lightness";
-@import "functions/flex-grid";
-@import "functions/golden-ratio";
-@import "functions/grid-width";
-@import "functions/linear-gradient";
-@import "functions/modular-scale";
+@import "functions/contains";
+@import "functions/is-length";
+@import "functions/is-size";
 @import "functions/px-to-em";
 @import "functions/px-to-rem";
-@import "functions/radial-gradient";
 @import "functions/strip-units";
 @import "functions/tint-shade";
 @import "functions/transition-property-name";
 @import "functions/unpack";
+@import "functions/modular-scale";
 
 // CSS3 Mixins
 @import "css3/animation";
@@ -40,21 +52,21 @@
 @import "css3/flex-box";
 @import "css3/font-face";
 @import "css3/font-feature-settings";
-@import "css3/hyphens";
 @import "css3/hidpi-media-query";
+@import "css3/hyphens";
 @import "css3/image-rendering";
-@import "css3/inline-block";
 @import "css3/keyframes";
 @import "css3/linear-gradient";
 @import "css3/perspective";
+@import "css3/placeholder";
 @import "css3/radial-gradient";
+@import "css3/selection";
+@import "css3/text-decoration";
 @import "css3/transform";
 @import "css3/transition";
 @import "css3/user-select";
-@import "css3/placeholder";
 
 // Addons & other mixins
-@import "addons/button";
 @import "addons/clearfix";
 @import "addons/directional-values";
 @import "addons/ellipsis";
